Remove unused stuff from serializer benchark TestClasses that only produced findbugs warnings.